#11 / TROPHY / Fix height on mobile

--- a/angular-games/src/app/rps/rps.component.scss
+++ b/angular-games/src/app/rps/rps.component.scss
@@ -71,7 +71,7 @@
 				border-radius: .25rem 0 0 .25rem;
 				color: $grey;
 				display: flex;
-				height: 74px;
+				min-height: 74px;
 				justify-content: center;
 			}
 			> :last-child {
